# apps/api/openapi/openapi.json
@@ -1595,12 +1595,9 @@
           },
           {
             "in": "query",
-            "name": "offset",
+            "name": "cursor",
             "schema": {
-              "default": 0,
-              "type": "integer",
-              "minimum": 0,
-              "maximum": 9007199254740991
+              "type": "string"
             }
           },
           {
@@ -1681,15 +1678,17 @@
                             "additionalProperties": false
                           }
                         },
-                        "total": {
-                          "type": "integer",
-                          "minimum": 0,
-                          "maximum": 9007199254740991
+                        "nextCursor": {
+                          "type": "string"
+                        },
+                        "hasMore": {
+                          "default": false,
+                          "type": "boolean"
                         }
                       },
                       "required": [
                         "items",
-                        "total"
+                        "hasMore"
                       ],
                       "additionalProperties": false
                     }
